--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -8,52 +8,52 @@
 
     <EditText
         android:id="@+id/etEmail"
-        android:layout_width="381dp"
-        android:layout_height="43dp"
+        android:layout_width="564dp"
+        android:layout_height="56dp"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
         android:ems="10"
         android:hint="Email"
         android:inputType="textEmailAddress"
-        app:layout_constraintBottom_toTopOf="@+id/etAssunto"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.101"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/etAssunto"
-        android:layout_width="383dp"
-        android:layout_height="47dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="565dp"
+        android:layout_height="44dp"
         android:ems="10"
         android:hint="Assunto"
         android:inputType="text"
         app:layout_constraintBottom_toTopOf="@+id/etTexto"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.102"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etEmail" />
 
     <EditText
         android:id="@+id/etTexto"
-        android:layout_width="383dp"
-        android:layout_height="481dp"
-        android:layout_marginBottom="36dp"
+        android:layout_width="566dp"
+        android:layout_height="266dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="8dp"
         android:ems="10"
         android:hint="Texto"
         android:inputType="text"
-        app:layout_constraintBottom_toTopOf="@+id/btnEnviar"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.103"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etAssunto" />
 
     <Button
         android:id="@+id/btnEnviar"
-        android:layout_width="384dp"
-        android:layout_height="49dp"
-        android:layout_marginBottom="8dp"
+        android:layout_width="122dp"
+        android:layout_height="61dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
         android:text="ENVIAR"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etTexto" />
+        app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
